Tue Mar 27 13:01:53 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,docs/deprecation.rst,docs/doxygen_api.conf.in,
	  docs/doxygen_source.conf.in: Updates for addition of
	  XAPIAN_DEPRECATED_EX() and XAPIAN_DEPRECATED_CLASS_EX.

Tue Mar 27 10:11:23 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING,include/xapian.h,include/xapian/deprecated.h: Add
	  XAPIAN_DEPRECATED_EX() and XAPIAN_DEPRECATED_CLASS_EX macros which
	  mark a feature as deprecated externally but not when building the
	  library.

Tue Mar 27 08:46:29 GMT 2012  Olly Betts <olly@survex.com>

	* api/compactor.cc: Include the xapian sub-headers we actually use
	  rather than xapian.h, to avoid needless rebuilds.

Tue Mar 27 08:33:28 GMT 2012  Olly Betts <olly@survex.com>

	* HACKING: Add example of deprecating a pure virtual method.

Tue Mar 27 08:30:17 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Sat Mar 24 12:33:44 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_databasereplicator.cc: Fix signed vs unsigned
	  comparison warning with GCC 4.4.3.

Sat Mar 24 12:26:13 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser_internal.h:
	  Change the default stemming strategy to STEM_SOME, to eliminate
	  the API gotcha that setting a stemmer is ignored until you also
	  set a strategy.
	* tests/queryparsertest.cc: Add testcase qp_defaultstrategysome1 to
	  check that the default is STEM_SOME.

Fri Mar 23 04:29:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/perftest/perftest.cc: Fix comment cut-and-paste error.

Fri Mar 23 04:28:24 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: Use git commit hash in the title of a coverage report
	  generated from a git tree.

Thu Mar 22 04:29:38 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-core.spec.in: Remove xapian-chert-update.

Mon Mar 19 05:42:50 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.cc: Don't count unweighted subqueries of